<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMeetingPlace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="meetingPlace">My Meeting Places</string>
    <string name="reg">Register</string>
    <string name="view">View</string>
    <string name="takePhoto">TAKE PHOTO</string>
    <string name="lat">Lat</string>
    <string name="latitude">LAT</string>
    <string name="lng">LNG</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="capturedImage">Captured Image</string>
    <string name="place">Places Info</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="listimage">Image</string>
    <string name="visited">Visited Place</string>
    <string name="location">Current Location</string>
    <string name="back">BACK</string>
    <string name="homepageimage">homepageimage</string>
    <string name="contact">Contact Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="contactdetails">Contact Details</string>
    
    <string name="txt_splash_title">WellCome To My Metting Place</string>
    <string name="name">Location Name</string>
    <string name="address">Location Address</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_mobile">Mobile</string>
   
    <string name="longtitude">Longitude</string>
  
    <string name="Insert">Save</string>
    <string name="hospitalName">Location Name</string>
    <string name="hospitallAddress">Location Address</string>
    <string name="hosdescription">Description</string>
    <string name="top">Location Lists</string>
    <string name="takaaphoto">Take A Photo</string>
    <string name="Captureaphoto">Capture Photo</string>
    <string name="logitude">Location Longitude</string>
    <string name="LogitudeI">Longitude</string>
    <string name="name1">Name</string>
    <string name="name2">Name</string>
    <string name="address1">Addres</string>
    <string name="image">Image</string>
    <string name="des">Details</string>
    <string name="destas">Details</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="register">Register</string>
    <string name="retrieve">Retrieve</string>
    <string name="txt_futter">Special Something</string>
    <string name="descriptions">Description</string>
    <string name="desc">Description</string>
    <string name="distan">Distance</string>
   
    <string name="topest">Visited Places</string>
    <string name="yourCurrentLocation">My Current Location</string>
    <string name="latituded">Lat</string>
    <string name="lon">Lon</string>
   
    
    <string name="ln">LNG:</string>
    
    <string name="longi">LNG</string>
    <string name="txt_homescreen">My Metting Places</string>
    <string name="txt_pageinfoscreen">Place Info</string>
    <string name="txt_btn_home">Home</string>
    
    <string name="txt_detail_titel">Contact Detail</string>
    <string name="txt_detail_name">Name</string>
    <string name="txt_detail_Email">Email</string>
    <string name="txt_detail_Mobile">Mobile</string>
    <string name="txt_detail_Lat">Latitude</string>
    <string name="txt_detail_Long">Longitude</string>
    <string name="txt_detail_Description">Description</string>
     <string name="txt_detail_image">Image</string>
      <string name="txt_btn_detail_Addphone">Add Contact Into Phone</string>

</resources>