<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/Insert"
                android:src="@drawable/camera" />
        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >
      
       
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/lat"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/ln"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/black"
                android:padding="5dp"
                android:text="@string/distan"
                android:textColor="#000000" />
        </LinearLayout>
        
        
            <TextView
		        android:id="@+id/tvDescription"
		        android:background="@drawable/black"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/desc"
		        android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp" >
        <TextView
                android:id="@+id/tvPlaceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        
        <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="15dp"
                android:text="@string/date"
                android:textColor="#000000" />
        
        <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginRight="5dp"
                android:text="@string/time"
                android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>