<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/insert"
    
    android:orientation="vertical" >

    <TextView
                android:id="@+id/tvMyVisitingPlacesList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"            
                android:text="@string/topest"
                android:gravity="center"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="10dp"
         android:orientation="horizontal"  >

      

        <TextView
                android:id="@+id/tvMyCurrentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/yourCurrentLocation"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:typeface="monospace" />
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
         android:orientation="vertical" 
        >
            
            <TextView
                android:id="@+id/tvMyCurrentPositionLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                
                android:text="@string/lat"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvMyCurrentPositionLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longi"
                android:textColor="#000000"
                android:textSize="11sp" />
        </LinearLayout>
        
         
    
     </LinearLayout>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="3" >

	

         <ListView
             android:id="@+id/lvPlacesList"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >

         </ListView>

    

	</LinearLayout>

     <Button
         android:id="@+id/btn_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
    	 android:gravity="center"
         android:background="@drawable/button_custom"
         
         android:onClick="backToHome"
         android:text="@string/txt_btn_home"
         android:layout_marginBottom="5dp"
         android:textColor="#ffffff" />

</LinearLayout>