<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/insert"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/txt_homescreen"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/img_heder"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:src="@drawable/ss" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_custom"
        android:padding="14dp"
        android:textSize="24sp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_custom"
        android:padding="14dp"
        android:textSize="24sp"
        android:text="@string/retrieve"
        android:textColor="#FFFFFF"
        android:typeface="monospace" />

    

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical" >

        </LinearLayout>



</LinearLayout>