<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    >

    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:text="@string/txt_detail_titel"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:layout_marginTop="20dp" >

         <ImageView
             android:id="@+id/view_img_Email"
             android:layout_width="0dp"
             
             android:layout_height="wrap_content"
             android:layout_weight="0.03"
             android:src="@drawable/email_image" />

         <ImageView
             android:id="@+id/view_img_message"
             android:layout_width="25dp"
             android:layout_height="match_parent"
             android:layout_weight="0.03"
             android:src="@drawable/message_image" />

         <ImageView
             android:id="@+id/view_img_call"
             android:layout_width="0dp"
             android:layout_height="match_parent"
          
             android:layout_weight="0.03"
             android:src="@drawable/call_image" />
        
        </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="10dp">
 		<TextView
                android:id="@+id/tvPlaceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:text="@string/txt_detail_name" />

        <TextView
            android:id="@+id/viewName"
            android:layout_width="wrap_content"
            android:textColor="#000000"
           android:layout_marginLeft="65dp"
            android:layout_height="wrap_content"
            
            android:ems="10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      	
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:text="@string/txt_detail_Email" />

       <TextView
            android:id="@+id/viewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginLeft="65dp"
            
            android:ems="10"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/txt_detail_Mobile"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/viewMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
           
            android:ems="10"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:text="@string/txt_detail_Lat" />

        <TextView
            android:id="@+id/viewLatitude"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_height="wrap_content"
        	android:layout_marginLeft="50dp"
            android:ems="10"
           
            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/txt_detail_Long"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/viewLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        
        android:ems="10"
        android:textColor="#000000" />

</LinearLayout>

        <Button
            android:id="@+id/btn_add_contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_custom"
            android:onClick="viewMap"
            android:text="@string/txt_btn_detail_Addphone"
            android:textColor="#ffffff" 
            />
    
</LinearLayout>

    </ScrollView>

</LinearLayout>